backport: re PR rtl-optimization/88001 (ASMCONS cannot handle properly UNSPEC(CONST))

Backport from trunk
	2018-12-14  Segher Boessenkool  <segher@kernel.crashing.org>

	PR rtl-optimization/88001
	* function.c (match_asm_constraints_1): Don't invalidly share RTL.

From-SVN: r267172